JOTM 21/09/2018 Agrega ventana de autoconsumo pipas
* Agrega vistas para registro de  autoconsumo pipa
* Crea metodo para hacer el llamado al servicio
* Queda pendiente el guardado en local y agregar lisener

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -137,8 +137,11 @@
         <activity
             android:name=".Activity.AutoconsumoEstacionActivity"
             android:label="@string/Autoconsumo_estacion" />
-        <activity android:name=".Activity.AutoconsumoInventarioActivity"
-            android:label="@string/Autoconsumo_inventario"/>
+        <activity
+            android:name=".Activity.AutoconsumoInventarioActivity"
+            android:label="@string/Autoconsumo_inventario" />
+        <activity android:name=".Activity.AutoconsumoPipaActivity"
+            android:label="@string/Autoconsumo"/>
     </application>
 
 </manifest>
