JOTM 21/09/2018 Inicia pantalla traspaso
* Inicia pantalla traspaso

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -140,8 +140,11 @@
         <activity
             android:name=".Activity.AutoconsumoInventarioActivity"
             android:label="@string/Autoconsumo_inventario" />
-        <activity android:name=".Activity.AutoconsumoPipaActivity"
-            android:label="@string/Autoconsumo"/>
+        <activity
+            android:name=".Activity.AutoconsumoPipaActivity"
+            android:label="@string/Autoconsumo" />
+        <activity android:name=".Activity.TraspasoEstacionActivity"
+            android:label="@string/Traspaso"/>
     </application>
 
 </manifest>
