--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -46,8 +46,7 @@
     <add key="GetListaUnidadAlmcenGas" value="api/catalogos/consulta/unidadalmacengas/" />
     <add key="GetListaEquiposTransporte" value="api/catalogos/consulta/equipotransporte" />
     <add key="GetListaBancos" value="api/catalogos/consulta/bancos" />
-    <add key="GetListaFormasPago" value="api/catalogos/consulta/formaspago" />
-    
+    <add key="GetListaFormaPagos" value="api/catalogos/consulta/formaspago" />    
     
     <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" />
     <add key="PutModificaEmpresas" value="api/catalogos/modifica/empresa" />    
@@ -90,8 +89,8 @@
     <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores" />
     <add key="GetListaProveedoresIdProveedor" value="api/catalogos/consulta/proveedores/" />
     <add key="PostRegistraProveedor" value="api/catalogos/registra/proveedor" />
-    <add key="PutModificaProveedor" value="api/catalogos/consulta/proveedores" />
-    <add key="PutEliminaProveedor" value="api/catalogos/consulta/proveedores" />
+    <add key="PutModificaProveedor" value="api/catalogos/modifica/proveedor" />
+    <add key="PutEliminaProveedor" value="api/catalogos/elimina/proveedor" />
     <add key="GetListaTipoProveedores" value="api/catalogos/consulta/tipos/proveedor" />
 
     <add key="GetCategoriaProducto" value="api/catalogos/consulta/categoria/producto/" />
