CJAL-24/09/2018 - termina fase de desarrollo Modulo Clientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -57,6 +57,8 @@
     <add key="PutEliminaClientes" value="api/catalogos/elimina/cliente/" />
     <add key="PostRegistraClienteLoc" value="api/catalogos/registra/clientelocacion" />
     <add key="GetListaLocacion" value="api/catalogos/clientes/listaclientesloc/" />
+    <add key="PutModificaClienteLocacion" value="api/catalogos/modifica/clientelocacion" />
+    <add key="PutEliminaClienteLocacion" value="api/catalogos/elimina/clientelocacion" />
 
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
