JOTM-24/09/2018 Pantallas de traspaso
* Pantallas de traspasos estación carburación 
* Pantallas de traspasos de pipa
* Llamadas al servidor

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -143,8 +143,12 @@
         <activity
             android:name=".Activity.AutoconsumoPipaActivity"
             android:label="@string/Autoconsumo" />
-        <activity android:name=".Activity.TraspasoEstacionActivity"
-            android:label="@string/Traspaso"/>
+        <activity
+            android:name=".Activity.TraspasoEstacionActivity"
+            android:label="@string/Traspaso" />
+        <activity android:name=".Activity.TraspasoPipaActivity"
+            android:label="@string/Traspaso"
+            />
     </application>
 
 </manifest>
