KSH-25/09/2018 Se integrarón las entidades de dominio para precio venta
Se integrarón las entidades de PrecioVenta y PrecioVentaEstatus. Adicionalmente se agregó EstatusPrecioVentaEnum

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Entidades\Pipa.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\PrecioVenta.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\PrecioVentaEstatus.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\Producto.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
@@ -247,6 +253,7 @@
     <Compile Include="IRepositorios\IUsuarioRepositorio.cs" />
     <Compile Include="ObjetosValor\Constantes\NotificacionPushConst.cs" />
     <Compile Include="ObjetosValor\Enum\enumIVA.cs" />
+    <Compile Include="ObjetosValor\Enum\EstatusPrecioVentaEnum.cs" />
     <Compile Include="ObjetosValor\Enum\IdentidadUnidadAlmacenGasEnum.cs" />
     <Compile Include="ObjetosValor\Enum\ImagenDeEnum.cs" />
     <Compile Include="ObjetosValor\Enum\RequisicionEstatusEnum.cs" />
