CJAL-25/09/2018- Se agregan los mensajes de validacion en los modulos: Empresas, Usuarios,Roles, Clientes. quedando asi listos para pasar a la fase de Testing.

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -489,6 +489,8 @@
     <Content Include="Views\Clientes\EditarClienteLoc.cshtml" />
     <Content Include="Views\PrecioVenta\Index.cshtml" />
     <Content Include="Views\PuntoVenta\Index.cshtml" />
+    <Content Include="Views\Clientes\NuevoCliente.cshtml" />
+    <Content Include="Views\Clientes\EditarCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
