JOTM-25/09/2018 Calibración estación
* Pantallas de calibración de estación
* Método para obtener listas de calibración estación
* Método para enviar al servidor datos de calibración estación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -146,9 +146,11 @@
         <activity
             android:name=".Activity.TraspasoEstacionActivity"
             android:label="@string/Traspaso" />
-        <activity android:name=".Activity.TraspasoPipaActivity"
-            android:label="@string/Traspaso"
-            />
+        <activity
+            android:name=".Activity.TraspasoPipaActivity"
+            android:label="@string/Traspaso" />
+        <activity android:name=".Activity.CalibracionEstacionActivity"
+            android:label="@string/Calibracion"/>
     </application>
 
 </manifest>
