JOTM-25/09/2018 Calibración pipa inicial
* Crea ventana de calibración de pipa inicial
* Genera el método de registro de calibración de pipa inicial
* Genera el método de consulta de catálogos de pipa inicial

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -149,7 +149,10 @@
         <activity
             android:name=".Activity.TraspasoPipaActivity"
             android:label="@string/Traspaso" />
-        <activity android:name=".Activity.CalibracionEstacionActivity"
+        <activity
+            android:name=".Activity.CalibracionEstacionActivity"
+            android:label="@string/Calibracion" />
+        <activity android:name=".Activity.CalibracionPipaActivity"
             android:label="@string/Calibracion"/>
     </application>
 
