--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -22,6 +22,7 @@
     <add key ="WebAppURL" value="http://localhost:54735"/>
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <add key="RutaTemporal" value="~/App_Data" />
+    <add key="RutaImagenes" value="~/Imagenes" />
     <!--URL del WebApp-->
     
     <!--GENERAR JWT TOKEN-->
