--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.5Security/Security.MainModule/Security.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.5Security/Security.MainModule/Security.MainModule.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Criptografia\AES.cs" />
+    <Compile Include="Criptografia\Base64.cs" />
     <Compile Include="Criptografia\SHA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token Service\TokenAutorizacion.cs" />
