--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -47,7 +47,8 @@
     <add key="GetListaEquiposTransporte" value="api/catalogos/consulta/equipotransporte" />
     <add key="GetListaBancos" value="api/catalogos/consulta/bancos" />
     <add key="GetListaFormasPago" value="api/catalogos/consulta/formaspago" />
-    
+    <add key="GetPuntosVenta" value="api/catalogos/puntoventa/listapuntosventa" />
+    <add key="GetPuntosVentaId" value="api/catalogos/puntoventa/listapuntosventa/" />
     
     <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" />
     <add key="PutModificaEmpresas" value="api/catalogos/modifica/empresa" />    
@@ -63,7 +64,7 @@
     <add key="GetListaLocacion" value="api/catalogos/clientes/listaclientesloc/" />
     <add key="PutModificaClienteLocacion" value="api/catalogos/modifica/clientelocacion" />
     <add key="PutEliminaClienteLocacion" value="api/catalogos/elimina/clientelocacion" />
-
+    
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
     <add key="PutModificaCentroCosto" value="api/catalogos/modifica/centro/costo" />
