JOTM-26/09/2018 Calibración de pipa final
* Crea ventana de calibración final
* Crea método para obtener la configuración

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -152,7 +152,10 @@
         <activity
             android:name=".Activity.CalibracionEstacionActivity"
             android:label="@string/Calibracion" />
-        <activity android:name=".Activity.CalibracionPipaActivity"
+        <activity
+            android:name=".Activity.CalibracionPipaActivity"
+            android:label="@string/Calibracion" />
+        <activity android:name=".Activity.PorcentajeCalibracionActivity"
             android:label="@string/Calibracion"/>
     </application>
 
