--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -311,7 +311,7 @@
     <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionCancelaDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionDTO.cs" />
-    <Compile Include="Models\Requisicion\RequisicionEDTO.cs" />
+    <!--<Compile Include="Models\Requisicion\RequisicionEDTO.cs" />-->
     <Compile Include="Models\Requisicion\RequisicionesModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionEstatusDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionEstatusEnum.cs" />
