--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Entidades\Empresa.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\EmpresaPartial.cs" />
     <Compile Include="Entidades\EquipoTransporte.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
