CJAL-27-09-2018. respaldo codigo avance modulo punto venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -49,7 +49,9 @@
     <add key="GetListaFormasPago" value="api/catalogos/consulta/formaspago" />
     <add key="GetPuntosVenta" value="api/catalogos/puntoventa/listapuntosventa" />
     <add key="GetPuntosVentaId" value="api/catalogos/puntoventa/listapuntosventa/" />
+    <add key="PutEliminaPuntosVenta" value="api/catalogos/elimina/puntoventa" />
     
+
     <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" />
     <add key="PutModificaEmpresas" value="api/catalogos/modifica/empresa" />    
     <add key="PutEliminarEmpresa" value="api/catalogos/elimina/empresa/" /> 
