--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -130,6 +130,10 @@
     <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/" />
     <add key="GetOrdenCompraEstatus" value="api/compras/buscar/ordenescompra/estatus" />
     <!--Compras-->
+    
+    <!-- Almacen -->
+    <add key="GetOrdenCompraEntrada" value="api/almacen/buscar/ordecompraentrada/" />
+    <!-- Almacen -->
   </appSettings>
   <system.web>
     <pages>
