JOTM-27/09/2018 Pantallas de Antisipos
* Ventanas de anticipos

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -155,8 +155,15 @@
         <activity
             android:name=".Activity.CalibracionPipaActivity"
             android:label="@string/Calibracion" />
-        <activity android:name=".Activity.PorcentajeCalibracionActivity"
-            android:label="@string/Calibracion"/>
+        <activity
+            android:name=".Activity.PorcentajeCalibracionActivity"
+            android:label="@string/Calibracion" />
+        <activity
+            android:name=".Activity.AnticipoEstacionCarburacionActivity"
+            android:label="@string/Anticipo" />
+        <activity android:name=".Activity.AnticipoTablaActivity"
+            android:label="@string/Anticipo"
+            />
     </application>
 
 </manifest>
