--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-messaging:17.3.2'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 repositories {
