JOTM-27/09/2018 Inicia servicio de anticipo
* Inicia servicio de anticipos
*Agrega menús de anticipos y punto de venta

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -86,6 +86,11 @@
     <add key="AppTraspasoEstacionCarbFinal" value="Traspaso - Gas|Estación Carb. (Final)|ic_ordenes_compra"/>
     <add key="AppTraspasoPipaInicial" value="Traspaso - Gas|Pipa (Inicial)|ic_ordenes_compra"/>
     <add key="AppTraspasoPipaFinal" value="Traspaso - Gas|Pipa (Final)|ic_ordenes_compra"/>
+    <add key="AppDisposicionAnticipoEstacionCarb" value="Disposición de efectivo - Anticipo|Estación Carburación|ic_anticipo_estacion"/>
+    <add key="AppDisposicionCorteCajaEstacionCarb" value="Disposición de efectivo - Anticipo|Estación Carburación|ic_anticipo_estacion"/>
+    <add key="AppCamionetaPuntoVenta" value="Camioneta de cilindros|Punto de Venta|ic_camioneta_punto_venta"/>
+    <add key="AppEstacionCarbPuntoVenta" value="Estación de Carburación|Punto de Venta|ic_estacion_punto_venta"/>
+    <add key="AppPipaPuntoVenta" value="Pipa|Punto de Venta|ic_Pipa_punto_venta"/>
     
     <!--Permisos para el menú-->
     <!--Firebase token-->
