CJAL-27/09/2018-Finaliza Desarrollo del Modulo Punto de Venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -50,7 +50,9 @@
     <add key="GetPuntosVenta" value="api/catalogos/puntoventa/listapuntosventa" />
     <add key="GetPuntosVentaId" value="api/catalogos/puntoventa/listapuntosventa/" />
     <add key="PutEliminaPuntosVenta" value="api/catalogos/elimina/puntoventa" />
-    
+    <add key="GetOperadorIdUsuario" value="api/catalogos/puntoventa/operadores/" />
+    <add key="PutModificaOperador" value="api/catalogos/modifica/puntoventa" />
+    <add key="GetUsuariosPuntoVenta" value="api/catalogos/puntoventa/usuariooperador/" />
 
     <add key="PutEmpresaConfig" value="api/catalogos/modifica/empresaconfiguracion" />
     <add key="PutModificaEmpresas" value="api/catalogos/modifica/empresa" />    
