--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AdaptadoresDTO\Catalogo\EstacionCarburacionAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\EstadoRepAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\FormaPagoAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Catalogo\OperadorChoferAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\PaisAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\ProductoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\ProveedorAdapter.cs" />
