JSA-27/09/2018 - Almacen entradas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -136,6 +136,7 @@
     <!--Compras-->
     
     <!-- Almacen -->
+    <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
     <add key="GetOrdenCompraEntrada" value="api/almacen/buscar/ordecompraentrada/" />
     <!-- Almacen -->
   </appSettings>
