--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11397,6 +11397,8 @@
     <Content Include="Views\PuntoVenta\Index.cshtml" />
     <Content Include="Views\Clientes\EditarCliente.cshtml" />
     <Content Include="Views\OrdenCompra\EntradaMercancia.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\AlmacenEntradaDTO.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\ClienteLocacionMod.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
