KSH-28/09/2018 Ajustes al proceso de aplicación de la descarga de gas

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -20,6 +20,7 @@
   <appSettings>
     <!--URL del WebApp-->
     <add key ="WebAppURL" value="http://localhost:54735"/>
+    <add key ="WebApi" value="http://localhost:5469"/>
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <add key="RutaTemporal" value="~/App_Data" />
     <add key="RutaImagenes" value="~/Imagenes" />
