--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -161,9 +161,14 @@
         <activity
             android:name=".Activity.AnticipoEstacionCarburacionActivity"
             android:label="@string/Anticipo" />
-        <activity android:name=".Activity.AnticipoTablaActivity"
-            android:label="@string/Anticipo"
-            />
+        <activity
+            android:name=".Activity.AnticipoTablaActivity"
+            android:label="@string/Anticipo" />
+        <activity
+            android:name=".Activity.PuntoVentaSolicitarActivity"
+            android:label="@string/Punto_de_venta" />
+        <activity android:name=".Activity.RegistroClienteActivity"
+            android:label="@string/Punto_de_venta"/>
     </application>
 
 </manifest>
