KSH-01/10/2018 Aplicar Descarga graba las entidades
Se terminó con el grabado de Aplicar Descarga, se sigue con Aplicar Recarga

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -22,9 +22,13 @@
     <add key ="WebAppURL" value="http://localhost:54735"/>
     <add key ="WebApi" value="http://localhost:5469"/>
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
-    <add key="RutaTemporal" value="~/App_Data" />
-    <add key="RutaImagenes" value="~/Imagenes" />
+    <add key="RutaTemporal" value="~/App_Data" />    
     <!--URL del WebApp-->
+    
+    <!--IMÁGENES-->
+    <add key="ImagenesDiasVigencia" value="93" />
+    <add key="RutaImagenesInventario" value="~/Imagenes/Inventario" />
+    <!--IMÁGENES-->
     
     <!--GENERAR JWT TOKEN-->
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
