--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
@@ -264,7 +264,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Imagenes\imagenes.txt">
+    <Content Include="Imagenes\Inventario\imagenes.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="PlantillasHtml\OrdenCompraNueva.html" />
