JOTM-01/10/2018-Vista de lista de clientes
* Crea método para registro cliente
* Crea método para mostrar resultados buscador 
* Crea vista de buscador
* Crea adapter para buscador

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -167,8 +167,10 @@
         <activity
             android:name=".Activity.PuntoVentaSolicitarActivity"
             android:label="@string/Punto_de_venta" />
-        <activity android:name=".Activity.RegistroClienteActivity"
-            android:label="@string/Punto_de_venta"/>
+        <activity
+            android:name=".Activity.RegistroClienteActivity"
+            android:label="@string/Punto_de_venta" />
+        <activity android:name=".Activity.BuscarClienteActivity"></activity>
     </application>
 
 </manifest>
