JSA-02/10/2018 Adelanto Complementos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11407,6 +11407,7 @@
     <Content Include="Views\OrdenCompra\OrdenCompraComplemento.cshtml" />
     <Content Include="Views\OrdenCompra\OrdenCompraPago.cshtml" />
     <Content Include="Views\OrdenCompra\OrdenCompraComplementoGas.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\OrdenCompraPagoDTO.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
