JSA-02/10/2018-Adelanto Compras

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -28,6 +28,7 @@
     <!--IMÁGENES-->
     <add key="ImagenesDiasVigencia" value="93" />
     <add key="RutaImagenesInventario" value="~/Imagenes/Inventario" />
+    <add key="RutaImagenesPagos" value="~/Imagenes/Pagos" />
     <!--IMÁGENES-->
     
     <!--GENERAR JWT TOKEN-->
